# games-c

./: README.md
adventure/: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  SPEC.md
adventure/src/: defines.h  event_bus.c  event_bus.h  game.c  game.h  main.c  menu.c  menu.h  platform.c  ui.c  ui.h
adventure/src/components/: bat.h  carried.h  carryable.h  dragon.h  gate.h  glow.h  input.h  item.h  particle.h  player.h  room_occupant.h  shape.h  sprite.h  transform.h
adventure/src/data/: game_modes.c  game_modes.h  rooms.c  rooms.h
adventure/src/managers/: audio.c  audio.h  component.c  entity.c  entity.h  input.c  system.c
adventure/src/systems/: ball.h  bat.c  bat.h  collision.c  collision.h  dragon.c  dragon.h  fog.c  fog.h  input.c  interaction.c  interaction.h  magnet.c  magnet.h  paddle.h  particle.c  particle.h  player.c  player.h  render.c  render.h  room_transition.c  room_transition.h  win.c  win.h
asteroids/: AGENTS.md  CLAUDE.md  CMakeLists.txt
asteroids/.claude/: settings.local.json
asteroids/src/: asteroids.c  asteroids.h  background.c  background.h  bullets.c  bullets.h  collisions.c  collisions.h  game.c  game_flow.c  game_flow.h  game_types.h  input.c  input.h  particles.c  particles.h  render_fx.c  render_fx.h  ship.c  ship.h  ui.c  ui.h  world.c  world.h
breakout/: CMakeLists.txt
breakout/src/: game.c  game.h  main.c  player.h
galaxian/: AGENTS.md  CLAUDE.md  CMakeLists.txt  SPEC.md
galaxian/.claude/: settings.local.json
galaxian/src/: audio.c  audio.h  drawing.c  drawing.h  galaxian.c  galaxian.h  game.c  game.h  game_state.c  game_state.h  main.c  particles.c  particles.h  platform.c  platform.h  resources.c  resources.h  state_gameover.c  state_gameplay.c  state_menu.c
pac-man/: CMakeLists.txt  pac-man.tiled-session  pac-man.tmx
pac-man/Tiled/: pac-man.tiled-session  pac-man.tmj  pac-man.tmx  rock.tsx
pac-man/src/: audio.c  audio.h  defines.h  game.h  ghost.c  ghost.h  helpers.h  main.c  maze.c  maze.h  nuklear_impl.c  pellet.c  pellet.h  player.c  player.h  renderer.c  renderer.h  score.c  score.h
pac-man/src/components/: hud_rect.h  label.h  physical.h  renderable.h  scene.h  spatial.h  tinted.h  viewport.h
pac-man/src/managers/: component.c  data.c  entity.c  entity.h  font.c  game.c  gui.c  gui.h  hud.c  hud.h  music.h  physics.c  physics.h  settings.c  sound.c  sound.h  system.c  texture.c  texture.h
pac-man/src/scenes/: level.c  splash.c  title.c
pac-man/src/systems/: audio.c  debug.c  gui.c  gui.h  hud.c  hud.h  input.c  physics.c  render.c  render.h  scene.c  time.c  viewport.c
pong/: AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json
pong/src/: event_bus.c  event_bus.h  game.c  main.c  platform.c  platform.h  score.c  score.h  ui.c  ui.h
pong/src/components/: ball.h  collider.h  collision.h  debug.h  goal_scored.h  input.h  label.h  paddle.h  score.h  score_label.h  shape.h  transform.h  velocity.h
pong/src/managers/: audio.c  audio.h  component.c  entity.c  entity.h  game.c  input.c  music.c  sound.c  sound.h  system.c  texture.c  texture.h
pong/src/systems/: audio.c  ball.c  collision.c  collision.h  input.c  paddle.c  render.c  render.h  score.c  score.h
raylib/: AGENTS.md  CLAUDE.md  CMakeLists.txt
raylib-flecs-template/src/components/: collision.h  input.h  physics.h  spatial.h
raylib-flecs-template/src/managers/: entity.h  gui.c  physics.h  settings.c
raylib-flecs-template/src/systems/: audio.c  gui.c  time.c
raylib-flecs/res/: gamecontrollerdb.txt
raylib-flecs/src/managers/: game.c  music.c
raylib-flecs/src/systems/: input.c  render.c  viewport.c
raylib/src/: screen_gameplay.c  screen_options.c  screen_title.c
sdl/: CLAUDE.md  CMakeLists.txt
sdl-flecs/: AGENTS.md  CLAUDE.md  CMakeLists.txt
sdl-flecs-simple/: CMakeLists.txt
sdl-flecs-simple/src/: game.c  game.h  helpers.h
sdl-flecs-simple/src/components/: audible.h  (+3 more)
sdl-flecs/src/: helpers.h
sdl-only/: AGENTS.md  CLAUDE.md  CMakeLists.txt
sdl-only/.claude/: settings.local.json
sdl-only/src/: collectible.c  collectible.h  collision.h  config.h  demo_scene.c  demo_scene.h  draw.c  draw.h  enemy.c  enemy.h  game.c  game.h  gamestate.c  gamestate.h  input.c  input.h  main.c  platform.c  platform.h  scene.c  scene.h  types.h  window.c  window.h
sdl-only/src/scenes/: gameover_scene.c  gameover_scene.h  play_scene.c  play_scene.h  scene_gameover.c  scene_gameover.h  scene_gameplay.c  scene_gameplay.h  scene_title.c  scene_title.h  title_scene.c  title_scene.h
sdl/.claude/: settings.local.json
sdl/src/: audio.c  audio.h  drawing.h  game.c  game.h  game_state.h  main.c  platform.c  resources.c  resources.h
space-invaders/: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  SPEC.md  main.c
space-invaders/.claude/: settings.local.json
space-invaders/assets/: level_01.json
space-invaders/resources/: level_01.json
space-invaders/src/: asset_registry.c  asset_registry.h  components.h  defines.h  drawing.c  drawing.h  effects.c  effects.h  entity_inspector.c  entity_inspector.h  event.c  event.h  game.c  game.h  game_renderer.c  game_renderer.h  game_state.h  game_types.h  gameplay.c  gameplay.h  main.c  nuklear_define.h  particles.c  particles.h  sarsa.c  sarsa.h  score.c  score.h  screen_ending.c  screen_gameplay.c  screen_logo.c  screen_title.c  screens.h  settings.c  settings.h  tags.h  texture.c  texture.h
space-invaders/src/components/: box_collider.h  health.h  shoot_timer.h  sprite.h  transform.h  velocity.h  velocity_comp.h
space-invaders/src/entities/: bullet.c  bullet.h  enemy.c  enemy.h  player.c  player.h
space-invaders/src/managers/: asset.c  asset.h  audio.c  audio.h  component.c  component.h  prefab.c  prefab.h
space-invaders/src/systems/: boundary.c  boundary.h  collision.c  collision.h  collision_system.c  collision_system.h  combat.c  combat.h  enemy_movement.c  enemy_movement.h  gui.c  gui.h  hud.c  hud.h  input.c  input.h  input_system.c  input_system.h  movement.c  movement.h  physics_system.c  physics_system.h  render_system.c  render_system.h  renderer.c  renderer.h
(+44 files in other folders)
